--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,19 @@
-input {
+#color-sheet {
   font-size: 20px;
+
+  .hex-input {
+    background: transparent;
+    font-size: 1em;
+    border: none;
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .swatch {
+    transition: all 1s;
+    &:before {
+      content: "#";
+    }
+  }
 }
