--- a/css/app.css
+++ b/css/app.css
@@ -11,27 +11,37 @@ body {
 #color-sheet {
   position: relative;
   border: 1px solid white;
-  font-size: 1.2em; }
-  #color-sheet div[class^=swatch] {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 1s;
-    border: 1px solid white; }
-    #color-sheet div[class^=swatch]:before {
-      content: "#"; }
-  #color-sheet .hex-input {
-    font-family: 'Source Code Pro', monospace;
-    font-size: 1em;
-    padding: 0.3em 0em 0.25em 0.25em;
-    background: transparent;
-    border: none;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-    text-transform: uppercase; }
-    #color-sheet .hex-input:focus {
-      outline: none;
-      background: rgba(0, 0, 0, 0.15);
-      border-color: white; }
+  font-size: 1.2em;
+  width: 100%;
+  height: 720px;
+  text-align: center;
+  vertical-align: middle;
+  border-collapse: collapse; }
+  #color-sheet .swatch {
+    transition: all 1s; }
+
+input[type=range][orient=vertical] {
+  -webkit-writing-mode: bt-lr;
+      -ms-writing-mode: bt-lr;
+          writing-mode: bt-lr;
+  /* IE */
+  -webkit-appearance: slider-vertical;
+  /* WebKit */
+  width: 8px;
+  height: 180px;
+  padding: 0 5px; }
+
+.color-input {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1em;
+  padding: 0.3em 0em 0.25em 0.25em;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  text-transform: uppercase; }
+  .color-input:focus {
+    outline: none;
+    background: rgba(0, 0, 0, 0.15);
+    border-color: white; }
 
 /*# sourceMappingURL=app.css.map */
