--- a/scss/app.scss
+++ b/scss/app.scss
@@ -16,33 +16,37 @@ body {
   position: relative;
   border: 1px solid white;
   font-size: 1.2em;
+  width: 100%;
+  height: 720px;
+  text-align: center;
+  vertical-align: middle;
+  border-collapse: collapse;
 
-  div[class ^= swatch] {
-    position: absolute;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+  .swatch {
     transition: all 1s;
-    border: 1px solid white;
-    &:before {
-      content: "#";
-    }
   }
+}
 
-  .hex-input {
-    font-family: 'Source Code Pro', monospace;
-    font-size: 1em;
-    padding: 0.3em 0em 0.25em 0.25em;
-    background: transparent;
-    border: none;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-    text-transform: uppercase;
-    &:focus {
-      outline: none;
-      background: rgba(0, 0, 0, 0.15);
-      border-color: white;
-    }
+input[type=range][orient=vertical]
+{
+    writing-mode: bt-lr; /* IE */
+    -webkit-appearance: slider-vertical; /* WebKit */
+    width: 8px;
+    height: 180px;
+    padding: 0 5px;
+}
+
+.color-input {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1em;
+  padding: 0.3em 0em 0.25em 0.25em;
+  background: transparent;
+  border: none;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
+  &:focus {
+    outline: none;
+    background: rgba(0, 0, 0, 0.15);
+    border-color: white;
   }
 }
