--- a/scss/app.scss
+++ b/scss/app.scss
@@ -12,6 +12,10 @@ body {
   margin: 0;
 }
 
+table td {
+  transition: all 1s;
+}
+
 #color-sheet {
   position: relative;
   border: 1px solid white;
@@ -21,10 +25,6 @@ body {
   text-align: center;
   vertical-align: middle;
   border-collapse: collapse;
-
-  .swatch {
-    transition: all 1s;
-  }
 }
 
 input[type=range][orient=vertical]
@@ -37,16 +37,22 @@ input[type=range][orient=vertical]
 }
 
 .color-input {
-  font-family: 'Source Code Pro', monospace;
-  font-size: 1em;
-  padding: 0.3em 0em 0.25em 0.25em;
-  background: transparent;
-  border: none;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
-  text-transform: uppercase;
-  &:focus {
-    outline: none;
-    background: rgba(0, 0, 0, 0.15);
-    border-color: white;
+  padding: 3em;
+  &:before {
+    content: "#";
+  }
+  input {
+    font-family: 'Source Code Pro', monospace;
+    font-size: 1em;
+    padding: 0.3em 0em 0.25em 0.25em;
+    background: transparent;
+    border: none;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    &:focus {
+      outline: none;
+      background: rgba(0, 0, 0, 0.15);
+      border-color: white;
+    }
   }
 }
