--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,7 +21,7 @@ table td {
   border: 1px solid white;
   font-size: 1.2em;
   width: 100%;
-  height: 720px;
+  height: 100vh;
   text-align: center;
   vertical-align: middle;
   border-collapse: collapse;
