--- a/css/app.css
+++ b/css/app.css
@@ -16,7 +16,7 @@ table td {
   border: 1px solid white;
   font-size: 1.2em;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 300px);
   text-align: center;
   vertical-align: middle;
   border-collapse: collapse; }
@@ -33,7 +33,7 @@ input[type=range][orient=vertical] {
   padding: 0 5px; }
 
 .color-input {
-  padding: 3em; }
+  padding: 1em; }
   .color-input:before {
     content: "#"; }
   .color-input input {
