--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,7 +21,7 @@ table td {
   border: 1px solid white;
   font-size: 1.2em;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 300px);
   text-align: center;
   vertical-align: middle;
   border-collapse: collapse;
@@ -37,7 +37,7 @@ input[type=range][orient=vertical]
 }
 
 .color-input {
-  padding: 3em;
+  padding: 1em;
   &:before {
     content: "#";
   }
